--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,10 +15,11 @@ tools:context=".Activities.SignUpActivity">
         android:id="@+id/tv_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="EMAIL"
+        android:text="E-mail"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
         android:textSize="16sp"
         android:textColor="@color/colorText"
         />
@@ -34,7 +35,6 @@ tools:context=".Activities.SignUpActivity">
         android:textSize="20sp"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:textStyle="bold"
         android:backgroundTint="@color/colorTextBold"
         android:layout_marginBottom="10dp"
         />
@@ -44,10 +44,11 @@ tools:context=".Activities.SignUpActivity">
         android:layout_below="@+id/et_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NUME"
+        android:text="Nume"
+        android:textStyle="bold"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:textSize="16sp"
         android:textColor="@color/colorText"
         />
@@ -64,7 +65,6 @@ tools:context=".Activities.SignUpActivity">
         android:inputType="textPersonName"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:textStyle="bold"
         android:backgroundTint="@color/colorTextBold"
         android:layout_marginBottom="10dp"
         />
@@ -74,10 +74,11 @@ tools:context=".Activities.SignUpActivity">
         android:layout_below="@+id/et_nume"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PRENUME"
+        android:text="Prenume"
+        android:textStyle="bold"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:textSize="16sp"
         android:textColor="@color/colorText"
         />
@@ -94,7 +95,6 @@ tools:context=".Activities.SignUpActivity">
         android:inputType="textPersonName"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:textStyle="bold"
         android:backgroundTint="@color/colorTextBold"
         android:layout_marginBottom="10dp"
         />
@@ -104,10 +104,11 @@ tools:context=".Activities.SignUpActivity">
         android:layout_below="@+id/et_prenume"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NUMĂR MATRICOL"
+        android:text="Număr matricol"
+        android:textStyle="bold"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:textSize="16sp"
         android:textColor="@color/colorText"
         />
@@ -123,7 +124,6 @@ tools:context=".Activities.SignUpActivity">
         android:textSize="20sp"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:textStyle="bold"
         android:backgroundTint="@color/colorTextBold"
         android:layout_marginBottom="10dp"
         />
@@ -133,10 +133,11 @@ tools:context=".Activities.SignUpActivity">
         android:layout_below="@+id/et_matricol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TELEFON"
+        android:text="Telefon"
+        android:textStyle="bold"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:textSize="16sp"
         android:textColor="@color/colorText"
         />
@@ -152,7 +153,6 @@ tools:context=".Activities.SignUpActivity">
         android:textSize="20sp"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:textStyle="bold"
         android:backgroundTint="@color/colorTextBold"
         android:layout_marginBottom="10dp"
         />
@@ -162,10 +162,11 @@ tools:context=".Activities.SignUpActivity">
         android:layout_below="@+id/et_telefon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PAROLĂ"
+        android:text="Parolă"
+        android:textStyle="bold"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:textSize="16sp"
         android:textColor="@color/colorText"
         />
@@ -182,7 +183,6 @@ tools:context=".Activities.SignUpActivity">
         android:password="true"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:textStyle="bold"
         android:backgroundTint="@color/colorTextBold"
         android:layout_marginBottom="10dp"
         />
@@ -194,7 +194,7 @@ tools:context=".Activities.SignUpActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/et_parola"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="22dp"
         android:textSize="20sp"
         android:text="Înregistrare"
         android:padding="6dp"
