--- a/app/src/main/res/layout/activity_find_student.xml
+++ b/app/src/main/res/layout/activity_find_student.xml
@@ -19,6 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:textSize="14sp"
+            android:hint=" Nume / Prenume / Telefon / E-mail "
             android:layout_marginEnd="20dp" />
 
         <androidx.recyclerview.widget.RecyclerView
