--- a/app/src/main/res/layout/row_students.xml
+++ b/app/src/main/res/layout/row_students.xml
@@ -17,38 +17,63 @@
             android:id="@+id/tv_nume_prenume"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
+            android:textSize="16sp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:textStyle="italic"
+            android:textStyle="bold"
             android:textColor="@color/colorWhite"
             android:text="NUME Prenume" />
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:id="@+id/ll_email">
+
+        <ImageView
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:src="@drawable/ic_email_white_24dp"
+            android:layout_marginStart="20dp"
+            />
         <TextView
             android:id="@+id/tv_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_nume_prenume"
-            android:textSize="16sp"
-            android:layout_marginTop="14dp"
+            android:textSize="12sp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/colorWhite"
             android:text="numeprenume@gmail.com" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ll_telefon"
+            android:layout_marginTop="8dp"
+            android:layout_below="@+id/ll_email">
+
+        <ImageView
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:src="@drawable/ic_phone_white_24dp"
+            android:layout_marginStart="20dp"
+            />
         <TextView
             android:id="@+id/tv_telefon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_email"
-            android:textSize="16sp"
-            android:layout_marginTop="8dp"
+            android:textSize="12sp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/colorWhite"
             android:layout_marginBottom="10dp"
             />
+        </LinearLayout>
 
     </RelativeLayout>
 
