--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -13,7 +13,17 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar_with_back_button">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_lista_locatii"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            />
+
     <FrameLayout
+        android:layout_below="@+id/rv_lista_locatii"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
