--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -165,10 +165,8 @@
 
             </LinearLayout>
 
-
-
-
             <LinearLayout
+                android:id="@+id/ll_butoane"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -209,6 +207,37 @@
                     android:background="@drawable/border_blue_full"
                     android:layout_marginBottom="20dp"
                     android:src="@drawable/ic_exit_to_app_white_24dp"
+                    />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/ll_contract"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:orientation="horizontal"
+                android:weightSum="2"
+                android:layout_below="@+id/ll_butoane"
+                android:layout_marginTop="20dp"
+                >
+                <ImageView
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:src="@drawable/ic_attachment_black_24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="20dp"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_contract"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Contract de studii"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="24dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorText"
                     />
             </LinearLayout>
 
