--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,209 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".Activities.SignUpActivity">
-
-<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:focusableInTouchMode="true"
+    tools:context=".Activities.SignUpActivity">
 
-    <TextView
-        android:id="@+id/tv_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="E-mail"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:textColor="@color/colorText"
-        />
-
-    <EditText
-        android:id="@+id/et_email"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_email"
-        android:singleLine="true"
-        android:textSize="20sp"
-        android:padding="6dp"
-        android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorTextBold"
-        android:layout_marginBottom="10dp"
-        />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_nume"
-        android:layout_below="@+id/et_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nume"
-        android:textStyle="bold"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorText"
-        />
+        <TextView
+            android:id="@+id/tv_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="E-mail"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="@color/colorText"
+            />
 
-    <EditText
-        android:id="@+id/et_nume"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_nume"
-        android:singleLine="true"
-        android:textSize="20sp"
-        android:inputType="textPersonName"
-        android:padding="6dp"
-        android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorTextBold"
-        android:layout_marginBottom="10dp"
-        />
+        <EditText
+            android:id="@+id/et_email"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_email"
+            android:singleLine="true"
+            android:textSize="20sp"
+            android:padding="6dp"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/colorText"
+            android:backgroundTint="@color/colorTextBold"
+            android:layout_marginBottom="10dp"
+            />
 
-    <TextView
-        android:id="@+id/tv_prenume"
-        android:layout_below="@+id/et_nume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Prenume"
-        android:textStyle="bold"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorText"
-        />
+        <TextView
+            android:id="@+id/tv_nume"
+            android:layout_below="@+id/et_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nume"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/colorText"
+            />
 
-    <EditText
-        android:id="@+id/et_prenume"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_prenume"
-        android:singleLine="true"
-        android:textSize="20sp"
-        android:inputType="textPersonName"
-        android:padding="6dp"
-        android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorTextBold"
-        android:layout_marginBottom="10dp"
-        />
+        <EditText
+            android:id="@+id/et_nume"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_nume"
+            android:singleLine="true"
+            android:textSize="20sp"
+            android:inputType="textCapWords"
+            android:padding="6dp"
+            android:textColor="@color/colorText"
+            android:backgroundTint="@color/colorTextBold"
+            android:layout_marginBottom="10dp"
+            />
 
-    <TextView
-        android:id="@+id/tv_matricol"
-        android:layout_below="@+id/et_prenume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Număr matricol"
-        android:textStyle="bold"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorText"
-        />
+        <TextView
+            android:id="@+id/tv_prenume"
+            android:layout_below="@+id/et_nume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Prenume"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/colorText"
+            />
 
-    <EditText
-        android:id="@+id/et_matricol"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_matricol"
-        android:singleLine="true"
-        android:textSize="20sp"
-        android:padding="6dp"
-        android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorTextBold"
-        android:layout_marginBottom="10dp"
-        />
+        <EditText
+            android:id="@+id/et_prenume"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_prenume"
+            android:singleLine="true"
+            android:textSize="20sp"
+            android:inputType="textCapWords"
+            android:padding="6dp"
+            android:textColor="@color/colorText"
+            android:backgroundTint="@color/colorTextBold"
+            android:layout_marginBottom="10dp"
+            />
 
-    <TextView
-        android:id="@+id/tv_telefon"
-        android:layout_below="@+id/et_matricol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Telefon"
-        android:textStyle="bold"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorText"
-        />
+        <TextView
+            android:id="@+id/tv_matricol"
+            android:layout_below="@+id/et_prenume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Număr matricol"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/colorText"
+            />
 
-    <EditText
-        android:id="@+id/et_telefon"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_telefon"
-        android:singleLine="true"
-        android:textSize="20sp"
-        android:padding="6dp"
-        android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorTextBold"
-        android:layout_marginBottom="10dp"
-        />
+        <EditText
+            android:id="@+id/et_matricol"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_matricol"
+            android:singleLine="true"
+            android:textSize="20sp"
+            android:padding="6dp"
+            android:textColor="@color/colorText"
+            android:backgroundTint="@color/colorTextBold"
+            android:layout_marginBottom="10dp"
+            />
 
-    <TextView
-        android:id="@+id/tv_parola"
-        android:layout_below="@+id/et_telefon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Parolă"
-        android:textStyle="bold"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorText"
-        />
+        <TextView
+            android:id="@+id/tv_telefon"
+            android:layout_below="@+id/et_matricol"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Telefon"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/colorText"
+            />
 
-    <EditText
-        android:id="@+id/et_parola"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_parola"
-        android:singleLine="true"
-        android:textSize="20sp"
-        android:password="true"
-        android:padding="6dp"
-        android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorTextBold"
-        android:layout_marginBottom="10dp"
-        />
+        <EditText
+            android:id="@+id/et_telefon"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_telefon"
+            android:singleLine="true"
+            android:textSize="20sp"
+            android:padding="6dp"
+            android:inputType="phone"
+            android:textColor="@color/colorText"
+            android:backgroundTint="@color/colorTextBold"
+            android:layout_marginBottom="10dp"
+            />
 
-    <Button
-        android:id="@+id/btn_signin"
-        android:layout_marginStart="90dp"
-        android:layout_marginEnd="90dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_parola"
-        android:layout_marginTop="22dp"
-        android:textSize="20sp"
-        android:text="Înregistrare"
-        android:padding="6dp"
-        android:textAllCaps="false"
-        android:layout_marginBottom="20dp"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/border_blue_full"
-        android:onClick="onSignUp"
-        />
+        <TextView
+            android:id="@+id/tv_parola"
+            android:layout_below="@+id/et_telefon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Parolă"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/colorText"
+            />
 
-</RelativeLayout>
+        <EditText
+            android:id="@+id/et_parola"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_parola"
+            android:singleLine="true"
+            android:textSize="20sp"
+            android:inputType="textPassword"
+            android:padding="6dp"
+            android:textColor="@color/colorText"
+            android:backgroundTint="@color/colorTextBold"
+            android:layout_marginBottom="10dp"
+            />
+
+        <Button
+            android:id="@+id/btn_signin"
+            android:layout_marginStart="90dp"
+            android:layout_marginEnd="90dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/et_parola"
+            android:layout_marginTop="22dp"
+            android:textSize="20sp"
+            android:text="Înregistrare"
+            android:padding="6dp"
+            android:textAllCaps="false"
+            android:layout_marginBottom="20dp"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/border_blue_full"
+            android:onClick="onSignUp"
+            />
+
+    </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
