--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -22,18 +22,20 @@
             android:src="@drawable/ic_email_black_24dp"
             android:layout_marginTop="24dp"
             android:layout_marginStart="20dp"
+            android:visibility="invisible"
             />
 
         <TextView
             android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="E-mail"
+            android:text="E-mail utilizator curent"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="24dp"
             android:textSize="18sp"
             android:textColor="@color/colorText"
+            android:visibility="invisible"
             />
 
     </LinearLayout>
@@ -42,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ll_email"
+            android:visibility="invisible"
             android:id="@+id/ll_email_nou">
 
             <EditText
@@ -58,59 +61,9 @@
 
         </LinearLayout>
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@+id/ll_email_nou"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:id="@+id/ll_parola">-->
-
-<!--            <ImageView-->
-<!--                android:layout_width="26dp"-->
-<!--                android:layout_height="26dp"-->
-<!--                android:src="@drawable/ic_security_black_24dp"-->
-<!--                android:layout_marginTop="24dp"-->
-<!--                android:layout_marginStart="20dp"-->
-
-<!--                />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/tv_password"-->
-<!--                android:layout_marginStart="20dp"-->
-<!--                android:layout_marginEnd="20dp"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Grupul de studenți"-->
-<!--                android:layout_below="@+id/et_username"-->
-<!--                android:layout_marginTop="24dp"-->
-<!--                android:textSize="18sp"-->
-<!--                android:textColor="@color/colorText"-->
-<!--                />-->
-<!--        </LinearLayout>-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@+id/ll_email_nou"-->
-<!--            android:id="@+id/ll_parola_noua">-->
-
-<!--            <EditText-->
-<!--                android:id="@+id/et_parola_noua"-->
-<!--                android:layout_width="240dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="când un student postează o nouă informație există"-->
-<!--                android:layout_marginStart="60dp"-->
-<!--                android:textColor="@color/colorText"-->
-<!--                android:singleLine="true"-->
-<!--                android:textStyle="bold"-->
-<!--                android:textSize="20sp"/>-->
-
-<!--        </LinearLayout>-->
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_email_nou"
             android:layout_marginTop="20dp"
             android:id="@+id/ll_notificari">
 
@@ -173,7 +126,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="* când un alt student va posta o nouă informație în grup, notificările pot fi active și când aplicația nu este deschisă pentru a nu pierde nicio informație *"
+                android:text="* Notificările apar când un student va posta o nouă informație în grup. Acestea se primesc și când aplicația nu este deschisă pentru a nu pierde nicio informație. *"
                 android:layout_below="@+id/ll_notificari"
                 android:layout_marginTop="50dp"
                 android:textSize="18sp"
