--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -118,7 +118,7 @@
         android:layout_marginStart="90dp"
         android:layout_marginEnd="90dp"
         android:padding="6dp"
-        android:layout_width="match_parent"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/et_password"
         android:layout_marginTop="32dp"
@@ -135,7 +135,7 @@
             android:layout_marginStart="90dp"
             android:layout_marginEnd="90dp"
             android:padding="6dp"
-            android:layout_width="match_parent"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_signin"
             android:layout_marginTop="32dp"
