--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,36 +9,36 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_icon"
-        android:layout_marginTop="20dp"
-        android:id="@+id/ll_email">
-
-        <ImageView
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:src="@drawable/ic_email_black_24dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginStart="20dp"
-            android:visibility="invisible"
-            />
-
-        <TextView
-            android:id="@+id/tv_username"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="E-mail utilizator curent"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="24dp"
-            android:textSize="18sp"
-            android:textColor="@color/colorText"
-            android:visibility="invisible"
-            />
+            android:layout_below="@+id/iv_icon"
+            android:layout_marginTop="20dp"
+            android:id="@+id/ll_email">
 
-    </LinearLayout>
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_email_black_24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+                android:visibility="invisible"
+                />
+
+            <TextView
+                android:id="@+id/tv_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="E-mail utilizator curent"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="24dp"
+                android:textSize="18sp"
+                android:textColor="@color/colorText"
+                android:visibility="invisible"
+                />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,46 +96,28 @@
             android:layout_below="@+id/ll_notificari"
             android:id="@+id/ll_on_off"
             android:layout_marginStart="60dp">
-        <Switch
-            android:layout_width="44dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:id="@+id/switch1"
-            android:checked="false"/>
+            <Switch
+                android:layout_width="44dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="8dp"
+                android:id="@+id/switch1"
+                android:checked="false"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_on_off"
                 android:layout_marginRight="50dp"/>
-
         </LinearLayout>
 
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_notificari"
+            android:layout_below="@+id/ll_notificari"
+            android:layout_marginTop="30dp"
+            android:padding="26dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_notificari"
-            android:layout_marginTop="20dp"
-            android:id="@+id/ll_explicatii">
-
-
-            <TextView
-                android:id="@+id/tv_notificari"
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="* Notificările apar când un student va posta o nouă informație în grup. Acestea se primesc și când aplicația nu este deschisă pentru a nu pierde nicio informație. *"
-                android:layout_below="@+id/ll_notificari"
-                android:layout_marginTop="50dp"
-                android:textSize="18sp"
-                android:textColor="@color/colorText"
-                />
-        </LinearLayout>
-
-
-
-
+            android:text="* notificările apar când un student va posta o nouă informație în grup. Acestea se primesc și când aplicația nu este deschisă pentru a nu pierde nicio informație. *"
+            />
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
