--- a/app/src/main/res/layout/row_students.xml
+++ b/app/src/main/res/layout/row_students.xml
@@ -11,6 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="OnSeeStudentDetail"
         android:background="#4d5273">
 
         <TextView
