--- a/app/src/main/res/layout/activity_contract_studii.xml
+++ b/app/src/main/res/layout/activity_contract_studii.xml
@@ -37,7 +37,7 @@
             android:id="@+id/btn_add_contract"
             android:layout_centerHorizontal="true"
             android:layout_width="230dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:textSize="20sp"
             android:text="Actualizează"
