--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -52,9 +52,10 @@
 
 
             <EditText
-                android:layout_width="240dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="60dp"
+                android:layout_marginEnd="60dp"
                 android:singleLine="true"
                 android:textColor="@color/colorText"
                 android:textStyle="bold"
@@ -101,9 +102,10 @@
 
 
             <EditText
-                android:layout_width="240dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="60dp"
+                android:layout_marginEnd="60dp"
                 android:singleLine="true"
                 android:textColor="@color/colorText"
                 android:textStyle="bold"
