--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,11 +49,12 @@
 
 
                 <EditText
-                    android:layout_width="240dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="ajfalfjaw"
                     android:editable="false"
                     android:layout_marginStart="60dp"
+                    android:layout_marginEnd="60dp"
                     android:singleLine="true"
                     android:textColor="@color/colorText"
                     android:textStyle="bold"
@@ -104,9 +105,10 @@
 
                 <EditText
                     android:id="@+id/et_telefon"
-                    android:layout_width="240dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="60dp"
+                    android:layout_marginEnd="60dp"
                     android:editable="false"
                     android:singleLine="true"
                     android:text="070175032"
@@ -152,11 +154,12 @@
                 android:id="@+id/ll_matricol_edit">
 
                 <EditText
-                    android:layout_width="240dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="MFS085308"
                     android:id="@+id/et_matricol"
                     android:layout_marginStart="60dp"
+                    android:layout_marginEnd="60dp"
                     android:singleLine="true"
                     android:textColor="@color/colorText"
                     android:textStyle="bold"
