--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -50,6 +50,7 @@ tools:context=".Activities.EditProfileActivity">
             android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
             android:editable="false"
             android:singleLine="true"
             android:text="ajfalfjaw"
@@ -102,6 +103,7 @@ tools:context=".Activities.EditProfileActivity">
             android:layout_height="wrap_content"
             android:text="070175032"
             android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
             android:singleLine="true"
             android:textColor="@color/colorText"
             android:textStyle="bold"
@@ -151,6 +153,7 @@ tools:context=".Activities.EditProfileActivity">
             android:layout_height="wrap_content"
             android:text="MFS085308"
             android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
             android:singleLine="true"
             android:textColor="@color/colorText"
             android:textStyle="bold"
