--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -279,6 +279,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_toStartOf="@+id/tv_7"
+                android:layout_marginBottom="8dp"
                 android:scaleType="centerInside"
                 android:background="@drawable/border_blue"
                 android:alpha="0.7"/>
