--- a/app/src/main/res/layout/activity_send_mail.xml
+++ b/app/src/main/res/layout/activity_send_mail.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="10dp"
     tools:context=".Activities.SendMailActivity">
+
+    <include layout="@layout/toolbar_with_back_button"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar_with_back_button">
 
         <TextView
             android:id="@+id/tv_email_destinatar"
@@ -35,7 +37,6 @@
             android:background="@drawable/border_blue"
             android:textColor="@color/colorText"
             android:text="Profesor ..."
-            android:padding="6dp"
             android:onClick="OnChooseProf"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
@@ -67,7 +68,6 @@
             android:layout_marginEnd="20dp"
             android:textColor="@color/colorText"
             android:hint="..."
-            android:padding="6dp"
             android:textStyle="bold"
             android:background="@drawable/border_blue"
             />
@@ -92,13 +92,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_email_mesaj"
             android:textSize="16sp"
-            android:gravity="left"
             android:layout_marginTop="16dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/colorText"
             android:hint="..."
-            android:padding="6dp"
             android:maxLines="7"
             android:lines="7"
             android:textStyle="bold"
@@ -111,22 +109,18 @@
             android:layout_marginTop="32dp"
             android:textSize="16sp"
             android:text="Trimite"
-            android:padding="6dp"
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
             android:background="@drawable/border_blue_full"
             android:onClick="OnSend"
-            android:layout_marginStart="90dp"
             android:layout_marginEnd="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:layout_alignParentEnd="true"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
 
             />
 
 
     </RelativeLayout>
-</androidx.core.widget.NestedScrollView>
+</RelativeLayout>
