--- a/app/src/main/res/layout/row_calendar.xml
+++ b/app/src/main/res/layout/row_calendar.xml
@@ -6,6 +6,8 @@
     android:orientation="vertical"
     android:id="@+id/rl_evenimente_zi"
     android:background="@drawable/border_blue"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
     android:layout_marginTop="10dp">
 
     <TextView
