--- a/app/src/main/res/layout/row_students.xml
+++ b/app/src/main/res/layout/row_students.xml
@@ -22,6 +22,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:textIsSelectable="true"
             android:textStyle="bold"
             android:textColor="@color/colorWhite"
             android:text="NUME Prenume" />
@@ -47,6 +48,7 @@
             android:textSize="12sp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:textIsSelectable="true"
             android:textColor="@color/colorWhite"
             android:text="numeprenume@gmail.com" />
         </LinearLayout>
@@ -69,6 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="12sp"
+            android:textIsSelectable="true"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/colorWhite"
